tests/compile/derive-invalid-attribute.stderr
error: Unexpected attribute: ignore
 --> tests/compile/derive-invalid-attribute.rs:5:13
  |
5 |     #[merge(ignore)]
  |             ^^^^^^
